[package]
name = "dv_26_4"
version = "0.2.0"
edition = "2024"

[dependencies]
# Cortex-M 
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
st7565 = { path = "../st7565" }

# Panic Handler
panic-probe = { version = "1.0.0", features = ["print-defmt"] }


# Embassy
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = "0.5.1"
embassy-rp = { version = "0.10.0", features = ["time-driver", "critical-section-impl", "rp235xa", "binary-info", "defmt"] }

# Defmt Logging
defmt = "1.0.1"
defmt-rtt = "1.1.0"
display-interface-spi = "0.5.0"
embassy-embedded-hal = "0.6.0" 
embassy-sync = "0.8.0"
embedded-graphics = "0.8.2"
rp235x-hal = "0.4.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
panic-halt = "1.0.0"
fugit = "0.3.9"
embedded-hal-compat = "0.13.0"
heapless = "0.9.3"



